--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,23 @@
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:5173/hikaru",
             "webRoot": "${workspaceFolder}/frontend/chess-data",        
+        },
+        {
+            "name": "FastAPI Backend Debug",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "uvicorn",  
+            "args": [
+                "backend.main:app",
+                "--reload",
+                "--host", "0.0.0.0",
+                "--port", "8989"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}"
+            }
         }
     ]
 }
